package.json changes

--- a/package.json
+++ b/package.json
@@ -3,7 +3,12 @@
     "version": "1.0.0",
     "scripts": {
         "start": "node backend/src/server.js",
-        "build": "cd frontend/real-estate-app && npm install && npm run build",
+        "server": "cd backend && node src/server.js",
+        "client": "cd frontend && npm start",
+        "build": "cd frontend && npm install && npm run build",
         "postinstall": "npm run build"
+    },
+    "dependencies": {
+        "concurrently": "^8.2.2"
     }
 }
