--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "start": "node backend/src/server.js",
     "server": "cd backend && node src/server.js",
     "client": "cd frontend/real-estate-app && npm start",
-    "build": "cd frontend/real-estate-app && npm run build",
+    "build": "cd frontend/real-estate-app && npm install && npm run build",
     "postinstall": "npm run build"
   },
   "dependencies": {
